--- a/Logica_de_Programación/first_test.html
+++ b/Logica_de_Programación/first_test.html
@@ -1,3 +1,5 @@
+<meta charset="UTF-8"> <!--Definir los caracteres que vamos a utilizar-->
+
 <h1>mi primer programa HTML</h1> <!--h1 es para poner titulos-->
 <br> <!--crear un salto de linea-->
 será esto realmente un programa? <br>
