--- a/Logica_de_Programación/2 text_more_numbers.html
+++ b/Logica_de_Programación/2 text_more_numbers.html
@@ -15,9 +15,9 @@
     document.write("<br><br>")
 
     document.write("El año de nacimiento de cada man es: <br>")
-    document.write("Juan nacio en el año: " + (2023-20) + "<br>")
-    document.write("Manuel nacio en el año: " + (2023-25) + "<br>")
-    document.write("Carlos nacio en el año: " + (2023-32) + "<br>")
+    document.write("Juan nacio en el año: " + (2023-20) + " esta joven <br>")
+    document.write("Manuel nacio en el año: " + (2023-25) + " esta tirando pa viejo <br>")
+    document.write("Carlos nacio en el año: " + (2023-32) + " ya casi usa baston <br>")
     document.write("La suma de todos es de: " + (20+25+32) + "<br><br>")
 
 </script>
