--- a/Logica_de_Programación/7_2juego_secreto.html
+++ b/Logica_de_Programación/7_2juego_secreto.html
@@ -1,18 +1,22 @@
 <meta charset="UTF-8">
 
-<h3>CREAR INPUT Y BOTON</h3>
+<h3>CREAR JUEGO SECRETO</h3>
 
 <input/> <!-- crea una caja de texto -->
 <button>Verificar si acerto con el secreto</button> <!-- crea un boton con ese texto -->
 
+<!-- Crear un array con n numeros secretos y verificar si el usuario adivina -->
 <script>    
+
     // querySelector(): trae el objeto input (caja de texto) de html a JavaScript
     var input = document.querySelector("input");
-    var secreto = Math.round(Math.random()*10);
     input.focus();      // focalize el cursor sobre el objeto, para escribir de una vez
 
+    var secretos = [2, 5, 6, 7] // se crea un array con los 4 numeros secretos
+
+    // Funcion veririfica si el numero en el input esta en el array secretos 
     function verificar(){        
-        if (parseInt(input.value) == secreto){ // value: llama esa propieda del objeto (caja de texto)
+        if (secretos.includes(parseInt(input.value))){ // value: llama esa propieda del objeto (caja de texto)
 
             alert("Usted acertó, FELICITACIONES!!!");
         }
