--- a/Logica_de_Programación/7_1texto_and_boton.html
+++ b/Logica_de_Programación/7_1texto_and_boton.html
@@ -6,7 +6,7 @@
 <button>Verificar si acerto con el secreto</button> <!-- crea un boton con ese texto -->
 
 <script>    
-    // querySelector(): trae el objeto input (caja de texto) de html a JavaScript
+    // querySelector(): trae un objeto en este caso input (caja de texto) de html a JavaScript
     var input = document.querySelector("input");
     var secreto = Math.round(Math.random()*10);
     input.focus();      // focalize el cursor sobre el objeto, para escribir de una vez
