--- a/Logica_de_Programación/7_2juego_secreto2.html
+++ b/Logica_de_Programación/7_2juego_secreto2.html
@@ -5,20 +5,37 @@
 <input/> <!-- crea una caja de texto -->
 <button>Verificar si acerto con el secreto</button> <!-- crea un boton con ese texto -->
 
-<!-- Crear un array con n numeros secretos y verificar si el usuario adivina -->
+<!-- Crear un array con n numeros aleatorios y verificar si el usuario adivina -->
 <script>    
 
     // querySelector(): trae un objeto en este caso input (caja de texto) de html a JavaScript
     var input = document.querySelector("input");
     input.focus();      // focalize el cursor sobre el objeto, para escribir de una vez
 
-    var secretos = [2, 5, 6, 7] // se crea un array con los 4 numeros secretos
+    // función que devuelve un array con n numeros random de (0-10), sin repetir
+    function sortearNumeros(cantidad){
+        let i = 0;
+        let secretos = [];
+        while (i < cantidad){
+
+            let numRandom = Math.floor(Math.random()*10)+1;
+            // corroborar que el numero random no se repita en el array
+            if (!secretos.includes(numRandom)){
+                secretos.push(numRandom);
+                i++;
+            }            
+        }
+        return secretos
+    }
+    
+    var secretos = sortearNumeros(4) // se crea un array de n numeros llamando la función sortearNumeros(n)
+    console.log(secretos)
 
     // Funcion veririfica si el numero en el input esta en el array secretos 
     function verificar(){        
         if (secretos.includes(parseInt(input.value))){ // value: llama esa propieda del objeto (caja de texto)
 
-            alert("Usted acertó, FELICITACIONES!!!");
+            alert(`Usted acertó, FELICITACIONES!!!`);
         }
         else{
             alert(`Usted erró, intentalo de nuevo!`);
@@ -27,7 +44,7 @@
         input.focus();      // focalize el cursor sobre el objeto, para escribir de una vez
 
     }
-    // querySelector(): trae el objeto button de html a JavaScript
+    // querySelector(): trae el objeto button de html a JavaScript ````
     var boton = document.querySelector("button");
     boton.onclick = verificar // ejecuvar la funcion verificar (llamarla sin parectesis o se ejecuta de una)
 
