--- a/HTML5_and_CSS3/2_1index_CSS.html
+++ b/HTML5_and_CSS3/2_1index_CSS.html
@@ -14,12 +14,16 @@
     </head>
 
     <body> <!-- Etiquetas de contenido -->
+
+        <div class="image-container"> <!-- insertar una imagen -->
+            <img src="imagenes/barber-g06c8bb1b0_1280.jpg" alt="imgane de una barberia">
+        </div>
         
         <h1> Sobre la Barbería ALURA </h1>
 
         <P>Ubicada en el corazon de Medellín, Colombia, la <strong>Barbería ALURA</strong> se enfoca en proporcionar una experiencia de corte de cabello y afeitado de alta calidad para hombres de todas las edades. La misión de la barbería es crear un ambiente acogedor y relajante para los clientes, donde puedan disfrutar de un servicio personalizado y detallado.</P>
 
-        <p style="font-size: 20px;"><em>Se ofrecen servicios de corte de cabello, afeitado de barba y patillas, arreglo de cejas y masajes faciales.<strong> Los barberos están altamente capacitados y utilizan técnicas modernas y tradicionales para brindar un resultado excepcional.</strong></em></p>
+        <p id="servicio"> <em>Se ofrecen servicios de corte de cabello, afeitado de barba y patillas, arreglo de cejas y masajes faciales.<strong> Los barberos están altamente capacitados y utilizan técnicas modernas y tradicionales para brindar un resultado excepcional.</strong></em></p>
 
         <p>Además, la barbería cuenta con una variedad de productos para el cuidado del cabello y la barba, como aceites, cremas, champús y acondicionadores, disponibles para su venta. En general, la barbería se enfoca en crear una experiencia de cuidado personal completa y satisfactoria para sus clientes.</p>
 
