--- a/asdasdas.html
+++ b/asdasdas.html
@@ -1,47 +1,43 @@
-<<canvas id="ventana" width="600" height="400"></canvas>
-<canvas id="lienzo" width="540" height="370"></canvas>
+<canvas width="600" height="400"></canvas>
 
 <script>
 
-    var canva_ventana = document.getElementById('ventana'); // Configurar Canva ventana
-    var pincel_1 = canva_ventana.getContext('2d');
-
-    var pantalla = document.getElementById('lienzo'); // Configuarar Canva lienzo
-        pantalla.style.position = "absolute";
-        pantalla.style.left = "57px";
-        pantalla.style.top = "27px";
-    var pincel = pantalla.getContext('2d');
-
-    //ELEMENTOS EN PANTALLA:
-    pincel_1.fillStyle = 'lightgrey'; // Dibujar fondo.
-    pincel_1.fillRect(0, 0, 600, 400);
-
-    pincel_1.fillStyle = 'white'; // Dibujar lienzo de dibujo.
-    pincel_1.fillRect(50, 20, 540, 370);
-    pincel_1.strokeStyle="black";
-    pincel_1.strokeRect(50, 20, 540, 370);
-
-    dibujarRectangulo(10, 20, 30, 30, "red"); // Dibujar cuadro color rojo en paleta.
-    dibujarRectangulo(10, 55, 30, 30, "green"); // Dibujar cuadro color verde en paleta.
-    dibujarRectangulo(10, 90, 30, 30, "blue"); // Dibujar cuadro color azul en paleta.
-    //________________________.
-    
-    var puedoDibujar = false;
-    var colores = ["red", "green", "blue"];
-    var color = colores[2];
-
     function dibujarRectangulo(x, y, base, altura, color) {
+        var pantalla = document.querySelector("canvas");
+        var pincel = pantalla.getContext("2d");
+
+        pincel.fillStyle=color;
+        pincel.fillRect(x,y, base, altura);
+        pincel.strokeStyle="black";
+        pincel.strokeRect(x,y, base, altura);
     }
 
-    function dibujarCirculo(evento) {
+    function escribirTexto(x , y, texto) {
+        var pantalla = document.querySelector("canvas");
+        var pincel = pantalla.getContext("2d");
+
+        pincel.font="15px Georgia";
+        pincel.fillStyle="black";
+        pincel.fillText(texto, x, y);
     }
 
-    function habilitarDibujar() {
+    function dibujarBarra(x, y, serie, colores, texto) {
+
+        escribirTexto(x, y - 10, texto);
+
+        var sumaAltura = 0;
+        for (var i = 0; i < serie.length; i++) {
+            var altura = serie[i];
+            dibujarRectangulo(x, y + sumaAltura, 50, altura, colores[i]);
+            sumaAltura = sumaAltura + altura;
+        }
     }
 
-    pantalla.onmousemove = dibujarCirculo;
-    pantalla.onmousedown = habilitarDibujar;
-    pantalla.onmouseup = deshabilitarDibujar;
-    //canva_ventana.onclick = cambiarColor;
+    var colores = ["blue","green","yellow", "red","gray"];
+    var serie2009 = [6,47,41,3,3];
+    var serie2019 = [81,9,3,3,4];
+
+    dibujarBarra(50, 50, serie2009, colores, "2009");
+    dibujarBarra(150, 50, serie2019, colores, "2019");
 
 </script>
