--- a/HTML5_and_CSS3/2_1index_CSS.html
+++ b/HTML5_and_CSS3/2_1index_CSS.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> <!--es una declaración importante que ayuda a garantizar que el código HTML se interprete correctamente en los navegadores web.-->
 
 <!-- html: define el inicio de la estructura y el contenido de un documento HTML-->
@@ -15,17 +16,38 @@
 
     <body> <!-- Etiquetas de contenido -->
 
+        <header> <!-- etiqueta que se usa solo para encabezados-->
+            <h1 class="tituloPrincipal">Barberia Alura</h1>
+        </header>
+
         <div class="image-container"> <!-- insertar una imagen -->
             <img src="imagenes/barber-g06c8bb1b0_1280.jpg" alt="imgane de una barberia">
         </div>
         
-        <h1> Sobre la Barbería ALURA </h1>
+        <div class="principal">
+            <h1> Sobre la Barbería ALURA </h1>
 
-        <P>Ubicada en el corazon de Medellín, Colombia, la <strong>Barbería ALURA</strong> se enfoca en proporcionar una experiencia de corte de cabello y afeitado de alta calidad para hombres de todas las edades. La misión de la barbería es crear un ambiente acogedor y relajante para los clientes, donde puedan disfrutar de un servicio personalizado y detallado.</P>
+            <P>Ubicada en el corazon de Medellín, Colombia, la <strong>Barbería ALURA</strong> se enfoca en proporcionar una experiencia de corte de cabello y afeitado de alta calidad para hombres de todas las edades. La misión de la barbería es crear un ambiente acogedor y relajante para los clientes, donde puedan disfrutar de un servicio personalizado y detallado.</P>
 
-        <p id="servicio"> <em>Se ofrecen servicios de corte de cabello, afeitado de barba y patillas, arreglo de cejas y masajes faciales.<strong> Los barberos están altamente capacitados y utilizan técnicas modernas y tradicionales para brindar un resultado excepcional.</strong></em></p>
+            <p id="servicio"> <em>Se ofrecen servicios de corte de cabello, afeitado de barba y patillas, arreglo de cejas y masajes faciales.<strong> Los barberos están altamente capacitados y utilizan técnicas modernas y tradicionales para brindar un resultado excepcional.</strong></em></p>
 
-        <p>Además, la barbería cuenta con una variedad de productos para el cuidado del cabello y la barba, como aceites, cremas, champús y acondicionadores, disponibles para su venta. En general, la barbería se enfoca en crear una experiencia de cuidado personal completa y satisfactoria para sus clientes.</p>
+            <p>Además, la barbería cuenta con una variedad de productos para el cuidado del cabello y la barba, como aceites, cremas, champús y acondicionadores, disponibles para su venta. En general, la barbería se enfoca en crear una experiencia de cuidado personal completa y satisfactoria para sus clientes.</p>
+        </div>
+
+        <div class="diferenciales">
+            <h2 class="centrarTitulo">Diferenciales</h2>
+            <!-- <ul>: Indica que se le va a pasar una lista-->    
+            <ul> 
+                <!-- <li> indica que esto se muestre como una etiqueta -->
+                <li class="items">Atención personalizada a los clientes </li>
+                <li class="items">Espacio diferenciado</li>
+                <li class="items">Localización</li>
+                <li class="items">Profesionales destacados</li>
+            </ul>
+
+            <img src="imagenes/barbershop-gf7632a0de_1280.jpg" class="imagenDiferencial">
+
+        </div>
 
     </body>
 
