--- a/HTML5_and_CSS3/3_1productos.html
+++ b/HTML5_and_CSS3/3_1productos.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <header>
-            <h1><img src="imagenes/logo.png" /></h1>
-            <div class="pepe">
+            <div class="caja">
+                <h1><img src="imagenes/logo.png" /></h1>
                 <!-- nav: etiqueta para referirse al panel de navegacion-->
                 <nav>
                     <ul>
@@ -23,5 +23,27 @@
                 </nav>
             </div>
         </header>
+        <main>
+            <ul class="productos">
+                <li>
+                    <h2>Cabello</h2>
+                    <img src="imagenes/cabello.jpg" alt="cabello">
+                    <p class="productos_descripcion">Con tijera o máquina, a gusto del cliente</p>
+                    <p class="productos_precio">$ 10.00</p>                    
+                </li>
+                <li>
+                    <h2>Barba</h2>
+                    <img src="imagenes/barba.jpg" alt="barba">
+                    <p class="productos_descripcion">Corte y diseño profesional de barba</p>
+                    <p class="productos_precio">$ 08.00</p>                    
+                </li>
+                <li>
+                    <h2>Cabello + Barba</h2>
+                    <img src="imagenes/cabello+barba.jpg" alt="cabello_barba">
+                    <p class="productos_descripcion">Paquete completo, corte mas barba</p>
+                    <p class="productos_precio">$ 15.00</p>                    
+                </li>
+            </ul>           
+        </main>
     </body>
 </html>
