--- a/HTML5_and_CSS3/3_1productos.html
+++ b/HTML5_and_CSS3/3_1productos.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="3_2Productos.css" />
     </head>
     <body>
-        <header>
+        <header> <!--Etiqueta para el encabezado-->
             <div class="caja">
                 <h1><img src="imagenes/logo.png" /></h1>
                 <!-- nav: etiqueta para referirse al panel de navegacion-->
@@ -23,7 +23,8 @@
                 </nav>
             </div>
         </header>
-        <main>
+
+        <main> <!--Etiqueta el cuerpo principal-->
             <ul class="productos">
                 <li>
                     <h2>Cabello</h2>
@@ -45,5 +46,10 @@
                 </li>
             </ul>           
         </main>
+
+        <footer> <!--Etiqueta para el pie de pagina -->
+            <img src="imagenes/logo-blanco.png" alt="logo_pie_pagina">
+            <p class="copyright">&copy Copyright Barbería Alura 2023</p>
+        </footer>
     </body>
 </html>
