--- a/asdasdas.html
+++ b/asdasdas.html
@@ -1,31 +1,29 @@
-<canvas id="lienzo" width="600" height="400" style="border: 2px solid #333; border-radius: 10px;"></canvas>
+<canvas width ="600" height="400"> </canvas>
 
 <script>
-  const lienzo = document.getElementById("lienzo");
-  const contexto = lienzo.getContext("2d");
-  const colores = ["#1abc9c", "#e74c3c", "#3498db"];
-  let indiceColorActual = 0; // comienza con azul turquesa
+    var pantalla = document.querySelector ("canvas");
+    var pincel = pantalla.getContext("2d");
+    pincel.fillStyle = "gray"
+    pincel.fillRect(0,0,600,400);
+    var colores = ["blue", "red", "green"];
+    var indiceColorActual = 0;
 
-  function dibujarCirculo({ pageX, pageY }) {
-    const x = pageX - lienzo.offsetLeft;
-    const y = pageY - lienzo.offsetTop;
+    function dibujarCirculo (evento){
+        var x = evento.pageX - pantalla.offsetLeft;
+        var y = evento.pageY - pantalla.offsetTop;
+        pincel.fillStyle = colores [indiceColorActual];
+        pincel.beginPath();
+        pincel.arc (x,y,10,0,2*3.14);
+        pincel.fill();
+        console.log (x + "," + y);
+    }
+    pantalla.onclick = dibujarCirculo;
 
-    contexto.fillStyle = colores[indiceColorActual];
-    contexto.beginPath();
-    contexto.arc(x, y, 10, 0, 2 * Math.PI);
-    contexto.fill();
-
-    console.log(`${x},${y}`);
-  }
-
-  function asignarEventos() {
-    lienzo.addEventListener("click", dibujarCirculo);
-    lienzo.addEventListener("contextmenu", (event) => {
-      indiceColorActual = (indiceColorActual + 1) % colores.length;
-      event.preventDefault();
-    });
-  }
-
-  asignarEventos();
-
-</script>
+    function alterarColor() {
+       indiceColorActual++;
+       if (indiceColorActual>= colores.length){
+           indiceColorActual = 0 
+       }
+       return false;
+    }
+    </script>
