--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -17,10 +17,10 @@
     </header>
     <main class="cuerpo_principal">
         <section class="seccion_1">
-            <!-- input dinamico -->
+            <!-- input dinamico --> 
             <div class="contenedor_caja_texto1">                 
                 <input id="inp_text" type="text" class="cont_caja1" autocomplete="off" placeholder=" ">
-                <label for="inp_text">Ingrese el texto aquí</label>
+                <label for="inp_text" class="label_caja1">Ingrese el texto aquí</label>
             </div>
 
             <div class="alerta">
