--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -13,6 +13,7 @@
     </head>
 <body>
     <header>
+        <h3 class="text_titulo">Encriptador</h3>
         <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a">
     </header>
     <main class="cuerpo_principal">
