--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -20,8 +20,8 @@
         <section class="seccion_1">
             <!-- input dinamico --> 
             <div class="contenedor_caja_texto1">                 
-                <input id="inp_text" type="text" class="cont_caja1" autocomplete="off" placeholder=" ">
-                <label for="inp_text" class="label_caja1">Ingrese el texto aquí</label>
+                <input id="inp_text" type="text" class="caja_texto1" autocomplete="off" placeholder=" ">
+                <label for="inp_text" class="label_caja_texto1">Ingrese el texto aquí</label>
             </div>
 
             <div class="alerta">
