--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <!-- tipografia referenciada desde google fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap" rel="stylesheet" />
         <title>Encriptador</title>
     </head>
-<body>
-    <header>
-        <h3 class="text_titulo">Encriptador</h3>
-        <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a">
-    </header>
-    <main class="cuerpo_principal">
-        <section class="seccion_1">
-            <!-- input dinamico --> 
-            <div class="contenedor_caja_texto1">                 
-                <input id="inp_text" type="text" class="caja_texto1" autocomplete="off" placeholder=" ">
-                <label for="inp_text" class="label_caja_texto1">Ingrese el texto aquí</label>
-            </div>
+    <body>
+        <header>
+            <h3 class="text_titulo">Encriptador</h3>
+            <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a" />
+        </header>
+        <main class="cuerpo_principal">
+            <section class="seccion_1 col-6 col-s-6">
+                <!-- input dinamico -->
+                <div class="contenedor_caja_texto1">
+                    <input id="inp_text" type="text" class="caja_texto1" autocomplete="off" placeholder=" " />
+                    <label for="inp_text" class="label_caja_texto1">Ingrese el texto aquí</label>
+                </div>
 
-            <div class="alerta">
-                <img src="imagenes/exclamation-circle-fill.png" alt="logo_alerta">
-                <p>Solo letras minusculas y sin acentos</p>
-            </div>
-            <div class="contenedor_botones">
-                <button class="boton_encriptar">Encriptar</button>
-                <button class="boton_desencriptar">Desencriptar</button>
-                <button class="boton_limpiar">Limpiar</button>   
-            </div>
-        </section>
-        <section class="seccion_2">
-            <div class="contenedor_dibujos_hackers">
-                <img src="imagenes/hacker.png" alt="imagen_hacker3">
-                <img src="imagenes/hacker-friend2.gif" alt="imagen_hacker3">
-            </div>
-            <div class="contenedor_parrafo">
-                <h3>Ningun mensaje fue encontrado</h3>
-                <p>Ingresa el texto que deseas encriptar o desencriptar</p>
-            </div>
-            <div class="contenedor_copiar">
-                <button class="boton_copiar">Copiar</button>
-            </div>
-            <div class="resultado">
-                <p class="texto_resultado"></p>
-            </div>
-        </section>
-    </main>
-    
-</body>
+                <div class="alerta">
+                    <img src="imagenes/exclamation-circle-fill.png" alt="logo_alerta" />
+                    <p>Solo letras minusculas y sin acentos</p>
+                </div>
+                <div class="contenedor_botones">
+                    <button class="boton_encriptar">Encriptar</button>
+                    <button class="boton_desencriptar">Desencriptar</button>
+                    <button class="boton_limpiar">Limpiar</button>
+                </div>
+            </section>
+            <section class="seccion_2 col-4 col-s-4">
+                <div class="contenedor_dibujos_hackers">
+                    <img src="imagenes/hacker.png" alt="imagen_hacker3" />
+                    <img src="imagenes/hacker-friend2.gif" alt="imagen_hacker3" />
+                </div>
+                <div class="contenedor_parrafo">
+                    <h3>Ningun mensaje fue encontrado</h3>
+                    <p>Ingresa el texto que deseas encriptar o desencriptar</p>
+                </div>
+                <div class="contenedor_copiar">
+                    <button class="boton_copiar">Copiar</button>
+                </div>
+                <div class="resultado">
+                    <p class="texto_resultado"></p>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
