--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style_botones.css" />
         <!-- tipografia referenciada desde google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,25 +30,27 @@
                     <p>Solo letras minusculas y sin acentos</p>
                 </div>
                 <div class="contenedor_botones">
-                    <button class="boton_encriptar">Encriptar</button>
-                    <button class="boton_desencriptar">Desencriptar</button>
-                    <button class="boton_limpiar">Limpiar</button>
+                    <button class="boton_seccion1">Encriptar</button>
+                    <button class="boton_seccion1">Desencriptar</button>
+                    <button class="boton_seccion1">Limpiar</button>
                 </div>
             </section>
             <section class="seccion_2 col-4 col-s-4">
-                <div class="contenedor_dibujos_hackers">
-                    <img src="imagenes/hacker.png" alt="imagen_hacker3" />
-                    <img src="imagenes/hacker-friend2.gif" alt="imagen_hacker3" />
-                </div>
-                <div class="contenedor_parrafo">
-                    <h3>Ningun mensaje fue encontrado</h3>
-                    <p>Ingresa el texto que deseas encriptar o desencriptar</p>
-                </div>
-                <div class="contenedor_copiar">
-                    <button class="boton_copiar">Copiar</button>
-                </div>
-                <div class="resultado">
-                    <p class="texto_resultado"></p>
+                <div class="contenedor_seccion_2">
+                    <div class="contenedor_dibujos_hackers">
+                        <img src="imagenes/hacker.png" alt="imagen_hacker3" />
+                        <img src="imagenes/hacker-friend2.gif" alt="imagen_hacker3" />
+                    </div>
+                    <div class="contenedor_parrafo">
+                        <h3>Ningun mensaje fue encontrado</h3>
+                        <p>Ingresa el texto que deseas encriptar o desencriptar</p>
+                    </div>
+                    <div class="contenedor_copiar">
+                        <button class="boton_copiar">Copiar</button>
+                    </div>
+                    <div class="resultado">
+                        <p class="texto_resultado"></p>
+                    </div>
                 </div>
             </section>
         </main>
