--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -37,18 +37,19 @@
             </section>
             <section class="seccion_2 col-4 col-s-4">
                 <div class="contenedor_seccion_2">
+                    <div class="resultado">
+                        <p class="texto_resultado"></p>
+                    </div>
                     <div class="contenedor_dibujos_hackers">
                         <img src="imagenes/hacker.png" alt="imagen_hacker3" />
                     </div>
                     <div class="contenedor_parrafo">
                         <h3>Ningun mensaje fue encontrado</h3>
+                        <br />
                         <p>Ingresa el texto que deseas encriptar o desencriptar</p>
                     </div>
                     <div class="contenedor_copiar">
-                        <button class="boton_copiar">Copiar</button>
-                    </div>
-                    <div class="resultado">
-                        <p class="texto_resultado"></p>
+                        <button class="boton_seccion1">Copiar</button>
                     </div>
                 </div>
             </section>
