--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -30,9 +30,9 @@
                     <p>Solo letras minusculas y sin acentos</p>
                 </div>
                 <div class="contenedor_botones">
-                    <button class="boton_seccion1">Encriptar</button>
-                    <button class="boton_seccion1">Desencriptar</button>
-                    <button class="boton_seccion1">Limpiar</button>
+                    <button class="boton_encriptar">Encriptar</button>
+                    <button class="boton_desencriptar">Desencriptar</button>
+                    <button class="boton_limpiar">Limpiar</button>
                 </div>
             </section>
             <section class="seccion_2 col-4 col-s-4">
@@ -40,19 +40,19 @@
                     <div class="resultado">
                         <p class="texto_resultado"></p>
                     </div>
-                    <div class="contenedor_dibujos_hackers">
-                        <img src="imagenes/hacker.png" alt="imagen_hacker3" />
+                    <h3>Ningun mensaje fue encontrado</h3>
+                    <div class="contenedor_dibujo_hacker">
+                        <img src="imagenes/hacker.png" alt="imagen_hacker3" id="img_hacker1" />
                     </div>
                     <div class="contenedor_parrafo">
-                        <h3>Ningun mensaje fue encontrado</h3>
-                        <br />
                         <p>Ingresa el texto que deseas encriptar o desencriptar</p>
                     </div>
                     <div class="contenedor_copiar">
-                        <button class="boton_seccion1">Copiar</button>
+                        <button class="boton_copiar">Copiar</button>
                     </div>
                 </div>
             </section>
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
