--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -48,7 +48,7 @@
                         <p>Ingresa el texto que deseas encriptar o desencriptar</p>
                     </div>
                     <div class="contenedor_copiar">
-                        <button class="boton_copiar">Copiar</button>
+                        <button onclick="" class="boton_copiar">Copiar</button>
                     </div>
                 </div>
             </section>
