--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -40,7 +40,7 @@
                     <div class="resultado">
                         <p class="texto_resultado"></p>
                     </div>
-                    <h3>Ningun mensaje fue encontrado</h3>
+                    <h3 class="mensaje_no_encontrado">Ningun mensaje fue encontrado</h3>
                     <div class="contenedor_dibujo_hacker">
                         <img src="imagenes/hacker.png" alt="imagen_hacker3" id="img_hacker1" />
                     </div>
