--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -21,7 +21,8 @@
             <section class="seccion_1 col-6 col-s-6">
                 <!-- input dinamico -->
                 <div class="contenedor_caja_texto1">
-                    <input id="inp_text" type="text" class="caja_texto1" autocomplete="off" placeholder=" " />
+                    <textarea name="perro" id="inp_text" class="caja_texto1" autocomplete="off" placeholder=" "></textarea>
+                    <!-- <input id="inp_text" type="text" class="caja_texto1" autocomplete="off" placeholder=" " /> -->
                     <label for="inp_text" class="label_caja_texto1">Ingrese el texto aquí</label>
                 </div>
 
