--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -18,7 +18,7 @@
             <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a" />
         </header>
         <main class="cuerpo_principal">
-            <section class="seccion_1 col-6 col-s-6">
+            <section class="seccion_1">
                 <!-- input dinamico -->
                 <div class="contenedor_caja_texto1">
                     <textarea name="perro" id="inp_text" class="caja_texto1" autocomplete="off" placeholder=" "></textarea>
@@ -36,7 +36,7 @@
                     <button class="boton_limpiar">Limpiar</button>
                 </div>
             </section>
-            <section class="seccion_2 col-4 col-s-4">
+            <section class="seccion_2">
                 <div class="contenedor_seccion_2">
                     <div class="resultado">
                         <p class="texto_resultado"></p>
