--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="style_botones.css" />
+        <link rel="stylesheet" href="style_switch_noche.css" />
         <!-- tipografia referenciada desde google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,6 +17,10 @@
         <header>
             <h3 class="text_titulo">Encriptador</h3>
             <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a" />
+            <label class="switch">
+                <input type="checkbox" />
+                <span class="slider"></span>
+            </label>
         </header>
         <main class="cuerpo_principal">
             <section class="seccion_1">
