--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="alerta">
-                    <img src="imagenes/exclamation-circle-fill.png" alt="logo_alerta" />
+                    <img src="imagenes/exclamation1.png" alt="logo_alerta" />
                     <p>Solo letras minusculas y sin acentos</p>
                 </div>
                 <div class="contenedor_botones">
