--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="style_botones.css" />
         <link rel="stylesheet" href="style_switch_noche.css" />
+        <link rel="stylesheet" href="style_social_network.css" />
+        <!-- Font Awesome es una biblioteca de iconos vectoriales de código abierto y gratuita -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <!-- tipografia referenciada desde google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +19,9 @@
     <body>
         <header>
             <h3 class="text_titulo">Encriptador</h3>
-            <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a" />
+            <a href="https://app.aluracursos.com/dashboard" target="_blank">
+                <img class="logo_a" src="imagenes/logo_a.png" alt="logo_a" />
+            </a>
             <label class="switch">
                 <input type="checkbox" />
                 <span class="slider"></span>
@@ -59,6 +64,19 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="flex-center">
+                <a href="https://github.com/AngelMasterr" target="_blank">
+                    <i class="fa fa-github fa-4x icon-3d"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/angel-duarte-prog/" target="_blank">
+                    <i class="fa fa-linkedin fa-4x icon-3d"></i>
+                </a>
+                <a href="https://twitter.com/AngelDuartePro" target="_blank">
+                    <i class="fa fa-twitter fa-4x icon-3d"></i>
+                </a>
+            </div>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
