--- a/asdasdas.html
+++ b/asdasdas.html
@@ -1,29 +1,26 @@
-<canvas width ="600" height="400"> </canvas>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="Challenger1_encriptador/style_social_network.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <title>Document</title>
+    </head>
+    <body></body>
+</html>
+<div class="flex-center">
+    <i class="fa fa-github fa-4x icon-3d"></i>
+    <i class="fa fa-gitlab fa-4x icon-3d"></i>
+    <i class="fa fa-bitbucket fa-4x icon-3d"></i>
+    <i class="fa fa-git fa-4x icon-3d"></i>
+</div>
 
-<script>
-    var pantalla = document.querySelector ("canvas");
-    var pincel = pantalla.getContext("2d");
-    pincel.fillStyle = "gray"
-    pincel.fillRect(0,0,600,400);
-    var colores = ["blue", "red", "green"];
-    var indiceColorActual = 0;
-
-    function dibujarCirculo (evento){
-        var x = evento.pageX - pantalla.offsetLeft;
-        var y = evento.pageY - pantalla.offsetTop;
-        pincel.fillStyle = colores [indiceColorActual];
-        pincel.beginPath();
-        pincel.arc (x,y,10,0,2*3.14);
-        pincel.fill();
-        console.log (x + "," + y);
-    }
-    pantalla.onclick = dibujarCirculo;
-
-    function alterarColor() {
-       indiceColorActual++;
-       if (indiceColorActual>= colores.length){
-           indiceColorActual = 0 
-       }
-       return false;
-    }
-    </script>
+<div class="flex-center">
+    <i class="fa fa-twitter fa-4x icon-3d"></i>
+    <i class="fa fa-facebook fa-4x icon-3d"></i>
+    <i class="fa fa-instagram fa-4x icon-3d"></i>
+    <i class="fa fa-whatsapp fa-4x icon-3d"></i>
+    <i class="fa fa-linkedin fa-4x icon-3d"></i>
+</div>
