--- a/Challenger1_encriptador/Encriptador.html
+++ b/Challenger1_encriptador/Encriptador.html
@@ -65,17 +65,20 @@
             </section>
         </main>
         <footer>
-            <div class="flex-center">
+            <div class="contenedor_social_network">
                 <a href="https://github.com/AngelMasterr" target="_blank">
-                    <i class="fa fa-github fa-4x icon-3d"></i>
+                    <i class="fa fa-github fa-2x icon-3d"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/angel-duarte-prog/" target="_blank">
-                    <i class="fa fa-linkedin fa-4x icon-3d"></i>
+                    <i class="fa fa-linkedin fa-2x icon-3d"></i>
                 </a>
                 <a href="https://twitter.com/AngelDuartePro" target="_blank">
-                    <i class="fa fa-twitter fa-4x icon-3d"></i>
+                    <i class="fa fa-twitter fa-2x icon-3d"></i>
                 </a>
             </div>
+            <a href="https://www.hackerrank.com/angelduarte" target="_blank" class="logo_angel">
+                <img src="imagenes/Logo_angel1.png" alt="logo_angel" />
+            </a>
         </footer>
         <script src="script.js"></script>
     </body>
